--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
     color: #333;
+     background-color: rgb(232, 230, 230);
 }
 
 /* Navbar */
@@ -70,6 +71,7 @@ body {
 
 .hero-image img {
     width: 280px;
+    border-radius: 50%;
 }
 
 /* About */
